--- a/team.html
+++ b/team.html
@@ -242,8 +242,8 @@ Executive Members are selected not just for their technical expertise, but also 
     <div class="contact-container">
       <div class="contact-card">
         <h3>UGANDA</h3>
-        <p><strong>Our Address:</strong> Nansana-Naluvule Along Hoima Road,<br>
-        Moroto Lane; Plot 20 P.O. Box 37403 Kampala.</p>
+        <p><strong>Our Address:</strong> Kikuube,<br>
+        Kyangwali, Namakakale</p>
         <p><strong>Email:</strong> <a href="thenextgen.org">thenextgeneration.org</a></p>
         <p><strong>Call at:</strong> ‪+256393240900‬</p>
       </div>
@@ -251,13 +251,13 @@ Executive Members are selected not just for their technical expertise, but also 
       <div class="contact-card">
         <h3>DRC</h3>
         <p><strong>Our Address:</strong> No. 10 Tulipiers Street, Les Volcans Neighborhood,<br>
-        Goma Municipality, Goma City, North Kivu.</p>
+        Bunia.</p>
         <p><strong>Email:</strong> <a href="thenextgeneration.org">thenextgeneration.org</a></p>
         <p><strong>Call at:</strong> ‪+243994252254‬</p>
       </div>
   
       <div class="contact-card">
-        <h3>USA</h3>
+        <h3>KENYA</h3>
         <p><strong>Our mailing Address:</strong> 5602 Tinkerbell ln apt 2411 Fort Worth, Tx 76119</p>
         <p><strong>Email:</strong> <a href="thenextgen.org">thenextgen.org</a></p>
         <p><strong>Call at:</strong> ‪+1 (276) 650-9001‬</p>
