--- a/tng.html
+++ b/tng.html
@@ -123,6 +123,7 @@
       <img src="Un.jpg" alt="Partner 4">
       <img src="FRC.jpeg" alt="Partner 5">
       <img src="OPM.jpg" alt="Partner 6">
+      <img src="alight_Logo.jpg" alt="Partner 7">
      </a>
 
       <!-- Repeat for infinite loop effect -->
@@ -133,6 +134,7 @@
       <img src="Un.jpg" alt="Partner 4">
       <img src="FRC.jpeg" alt="Partner 5">
       <img src="OPM.jpg" alt="Partner 6">
+      <img src="alight_Logo.jpg" alt="Partner 7">
      </a>
     </div>
   </div>
@@ -152,8 +154,8 @@
     <div class="contact-container">
       <div class="contact-card">
         <h3>UGANDA</h3>
-        <p><strong>Our Address:</strong> Nansana-Naluvule Along Hoima Road,<br>
-        Moroto Lane; Plot 20 P.O. Box 37403 Kampala.</p>
+        <p><strong>Our Address:</strong> Kikuube,<br>
+        Kyangwali, Namakakale.</p>
         <p><strong>Email:</strong> <a href="thenextgen.org">thenextgeneration.org</a></p>
         <p><strong>Call at:</strong> ‪+256393240900‬</p>
       </div>
@@ -161,13 +163,13 @@
       <div class="contact-card">
         <h3>DRC</h3>
         <p><strong>Our Address:</strong> No. 10 Tulipiers Street, Les Volcans Neighborhood,<br>
-        Goma Municipality, Goma City, North Kivu.</p>
+        Bunia.</p>
         <p><strong>Email:</strong> <a href="thenextgeneration.org">thenextgeneration.org</a></p>
         <p><strong>Call at:</strong> ‪+243994252254‬</p>
       </div>
   
       <div class="contact-card">
-        <h3>USA</h3>
+        <h3>KENYA</h3>
         <p><strong>Our mailing Address:</strong> 5602 Tinkerbell ln apt 2411 Fort Worth, Tx 76119</p>
         <p><strong>Email:</strong> <a href="thenextgen.org">thenextgen.org</a></p>
         <p><strong>Call at:</strong> ‪+1 (276) 650-9001‬</p>
