--- a/tng.html
+++ b/tng.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>The Next Generation - TNG</title>
   <link rel="stylesheet" href="tng.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
   
 </head>
-<body>
+<body class="bg-gray-100 text-gray-800">
   <header>
     <nav class="navbar">
       <div class="logo">
@@ -27,7 +28,7 @@
           </ul>
         </li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
       </ul>
       <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     </nav>
@@ -118,23 +119,47 @@
       <!-- Duplicate logos for seamless animation loop -->
      <a href="#" target="_blank">
       <img src="NRC.jpg" alt="Partner 1">
+     </a>
+     <a href="#" target="_blank">
       <img src="Angaza.jpeg" alt="Partner 2">
+     </a>
+     <a href="#" target="_blank">
       <img src="EccoNnest.jpg" alt="Partner 3">
+     </a>
+     <a href="#" target="_blank">
       <img src="Un.jpg" alt="Partner 4">
+     </a>
+     <a href="#" target="_blank">
       <img src="FRC.jpeg" alt="Partner 5">
+     </a>
+     <a href="#" target="_blank">
       <img src="OPM.jpg" alt="Partner 6">
+     </a>
+     <a href="#" target="_blank">
       <img src="alight_Logo.jpg" alt="Partner 7">
      </a>
 
       <!-- Repeat for infinite loop effect -->
      <a href="#" target="_blank">
-      <img src="NRC.jpg" alt="Partner 1">
-      <img src="Angaza.jpeg" alt="Partner 2">
-      <img src="EccoNnest.jpg" alt="Partner 3">
-      <img src="Un.jpg" alt="Partner 4">
-      <img src="FRC.jpeg" alt="Partner 5">
-      <img src="OPM.jpg" alt="Partner 6">
-      <img src="alight_Logo.jpg" alt="Partner 7">
+       <img src="NRC.jpg" alt="Partner 1">
+     </a>
+     <a href="#" target="_blank"></a>
+       <img src="Angaza.jpeg" alt="Partner 2">
+     </a>
+     <a href="#" target="_blank">
+       <img src="EccoNnest.jpg" alt="Partner 3">
+     </a>
+     <a href="#" target="_blank">
+       <img src="Un.jpg" alt="Partner 4">
+     </a>
+     <a href="#" target="_blank">
+       <img src="FRC.jpeg" alt="Partner 5">
+     </a>
+     <a href="#" target="_blank">
+       <img src="OPM.jpg" alt="Partner 6">
+     </a>
+     <a href="#" target="_blank">
+       <img src="alight_Logo.jpg" alt="Partner 7">
      </a>
     </div>
   </div>
@@ -149,6 +174,28 @@
       <button type="submit">Send</button>
     </form>
   </section> -->
+
+  <!-- Google Map Section -->
+<section class="bg-white py-12 px-4 sm:px-8 lg:px-16">
+  <div class="max-w-7xl mx-auto text-center mb-8">
+    <h2 class="text-3xl font-bold text-green-700 mb-2">Our Location</h2>
+    <p class="text-gray-600 text-lg">Visit The Next Generation (TNG) at Kyangwali Refugee Settlement, Uganda</p>
+  </div>
+
+  <div class="max-w-6xl mx-auto">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.792693030375!2d30.962944874995657!3d1.3584406616542614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x17637787ff07aeb3%3A0x2d1b5a99e1adf72f!2sKyangwali%20Refugee%20Settlement!5e0!3m2!1sen!2sug!4v1715865700000!5m2!1sen!2sug"
+      width="100%"
+      height="400"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+      class="rounded-xl shadow-lg w-full"
+    ></iframe>
+  </div>
+</section>
+
 
   <section class="contact-section">
     <div class="contact-container">
