--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
           </ul>
         </li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
       </ul>
       <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     </nav>
