--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
           </ul>
         </li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
       </ul>
       <div class="menu-toggle" id="menu-toggle">&#9776;</div>
     </nav>
@@ -189,7 +189,7 @@ Executive Members are selected not just for their technical expertise, but also 
 
     <div class="member-card">
       <img src="B3.jpg" alt="Executive Member 1">
-      <a href="#" class="member-name">Baudjo Isaac</a>
+      <a href="#" class="member-name">Baujo Isaac</a>
       <p class="member-role">Communication Officer</p>
       <div class="social-icons">
         <a href="#"><i class="fab fa-twitter"></i></a>
