--- a/tng.html
+++ b/tng.html
@@ -91,7 +91,7 @@
       <p>
         Our adult literacy programs empower individuals with essential reading, writing, and numeracy skills, enabling self-reliance and participation in the economy...
       </p>
-      <a href="#" class="read-more-btn">Read More</a>
+      <a href="http://127.0.0.1:5500/adult.html" class="read-more-btn">Read More</a>
     </div>
 
     <!-- Youth – Soccer -->
@@ -100,7 +100,7 @@
       <p>
         We engage young people through soccer, promoting teamwork, discipline, leadership, and social inclusion while offering mentorship opportunities...
       </p>
-      <a href="#" class="read-more-btn">Read More</a>
+      <a href="http://127.0.0.1:5500/soccer.html" class="read-more-btn">Read More</a>
     </div>
   </div>
 </section>
